--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"Framework"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibCommonUIUtils,LibCommonUtils,LibCustomView,LibText,LibViewExt,LibOS"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.4.1"
+ext.moduleVersionName = "2.5.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -50,7 +50,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
-                        "LibRecycleviewExt", "LibTouchRegion"
+                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt"
                 ]
         ],
         "LibUtils"                  : [
@@ -59,7 +59,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
                         "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
-                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug"
+                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug","LibOS"
                 ]
         ],
         "LibWrapper"                : [
@@ -253,7 +253,7 @@ ext.moduleInfo = [
         "LibDialog"                 : [
                 "version"            : "2.1.0",
                 "artifactId"         : "lib-dialog",
-                "apidependenciesList": ["LibThread", "LibImage", "LibCommonUIUtils"]
+                "apidependenciesList": ["LibThread", "LibImage", "LibOS"]
         ],
         "LibNotification"           : [
                 "version"            : "2.3.0",
@@ -288,8 +288,21 @@ ext.moduleInfo = [
         "LibTouchRegion"            : [
                 "version"            : "2.4.0",
                 "artifactId"         : "lib-touchregion",
-                "apidependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": ["LibCommonUIUtils","LibOS"]
+        ],
+        "LibViewExt"                : [
+                "version"            : "2.4.0",
+                "artifactId"         : "lib-view-ext",
+                "apidependenciesList": ["LibCommonUIUtils"   ]
+        ],
+        "LibOS"                : [
+                "version"            : "2.4.0",
+                "artifactId"         : "lib-android-os",
+                "apidependenciesList": ["LibLog"]
         ]
+
+
+
 ]
 
 
