--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibTouchRegion"
+ext.mainProject = "LibText"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"Framework"
  */
-ext.developModule = "LibTouchRegion"
+ext.developModule = "LibText"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -261,7 +261,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
         "LibText"                   : [
-                "version"            : "2.4.1",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-text",
                 "apidependenciesList": ["LibAndroid"]
         ],
