--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"Framework"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibDeviceNetwork"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -59,7 +59,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
                         "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
-                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug","LibOS"
+                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug", "LibOS"
                 ]
         ],
         "LibWrapper"                : [
@@ -204,7 +204,7 @@ ext.moduleInfo = [
         "LibDeviceNetwork"          : [
                 "version"            : "2.5.0",
                 "artifactId"         : "lib-device-network",
-                "apidependenciesList": ["LibCommonUtils"]
+                "apidependenciesList": ["LibCommonUtils", "LibText", "LibThread"]
         ],
         "LibTimer"                  : [
                 "version"            : "2.0.18",
@@ -288,19 +288,18 @@ ext.moduleInfo = [
         "LibTouchRegion"            : [
                 "version"            : "2.5.0",
                 "artifactId"         : "lib-touchregion",
-                "apidependenciesList": ["LibCommonUIUtils","LibOS"]
+                "apidependenciesList": ["LibCommonUIUtils", "LibOS"]
         ],
         "LibViewExt"                : [
                 "version"            : "2.5.0",
                 "artifactId"         : "lib-view-ext",
-                "apidependenciesList": ["LibCommonUIUtils"   ]
+                "apidependenciesList": ["LibCommonUIUtils"]
         ],
-        "LibOS"                : [
+        "LibOS"                     : [
                 "version"            : "2.5.0",
                 "artifactId"         : "lib-android-os",
                 "apidependenciesList": ["LibLog"]
         ]
-
 
 
 ]
