--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibDeviceNetwork"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"Framework"
  */
-ext.developModule = "LibDeviceNetwork"
+ext.developModule = "LibDeviceNetwork,LibOS,LibAPK"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -202,7 +202,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibDeviceNetwork"          : [
-                "version"            : "2.5.3",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-device-network",
                 "apidependenciesList": ["LibCommonUtils", "LibText", "LibThread", "LibEncrypt"]
         ],
@@ -286,7 +286,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibRefresh"]
         ],
         "LibTouchRegion"            : [
-                "version"            : "2.5.3",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-touchregion",
                 "apidependenciesList": ["LibCommonUIUtils", "LibOS"]
         ],
@@ -296,7 +296,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibOS"                     : [
-                "version"            : "2.5.3",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-android-os",
                 "apidependenciesList": ["LibLog"]
         ]
