--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibEncrypt"
+ext.mainProject = "LibRefresh"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid"
  */
-ext.developModule = "LibEncrypt"
+ext.developModule = "LibRefresh"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -194,7 +194,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibRefresh"                : [
-                "version"            : "2.5.0",
+                "version"            : "2.5.10",
                 "artifactId"         : "lib-refresh",
                 "apidependenciesList": [
                         'com.github.ybq:Android-SpinKit:1.0.2',
