--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibViewExt"
+ext.mainProject = "LibQRCode"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid"
  */
-ext.developModule = "LibViewExt"
+ext.developModule = "LibQRCode"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -181,7 +181,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibQRCode"                 : [
-                "version"            : "2.5.0",
+                "version"            : "2.5.10",
                 "artifactId"         : "lib-qrcode",
                 "apidependenciesList": [
                         'com.google.zxing:core:3.3.0',
