--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibFile,LibZip"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.5.14"
+ext.moduleVersionName = "2.5.15"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -59,7 +59,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
                         "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
-                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug", "LibOS"
+                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug", "LibOS","LibZip"
                 ]
         ],
         "LibWrapper"                : [
@@ -234,12 +234,19 @@ ext.moduleInfo = [
         "LibFile"                   : [
                 "version"            : "2.5.10",
                 "artifactId"         : "lib-file",
-                "apidependenciesList": ["LibEncrypt", "LibCommonUtils"]
+                "apidependenciesList": [
+                        "LibEncrypt",
+                        "LibCommonUtils"]
+        ],
+        "LibZip"                   : [
+                "version"            : "2.5.10",
+                "artifactId"         : "lib-zip",
+                "apidependenciesList": [ "LibLog"]
         ],
         "LibDownloadAndInstall"     : [
                 "version"            : "2.5.14",
                 "artifactId"         : "lib-download-install",
-                "apidependenciesList": ["LibFile", "LibRequest","LibThread"]
+                "apidependenciesList": ["LibFile","LibZip", "LibRequest", "LibThread"]
         ],
         "LibImage"                  : [
                 "version"            : "2.5.10",
