--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext.mainProject = "APPTest"
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid"
  */
-ext.developModule = "LibTTS"
+ext.developModule = "LibHttpCommon,LibTTS"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.5.19"
+ext.moduleVersionName = "2.5.20"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
