--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibNotification"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.5.22"
+ext.moduleVersionName = "2.5.23"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -45,15 +45,15 @@ ext.moduleInfo = [
                 ]
         ],
         "LibWrapper"                : [
-                "version"            : "2.5.22",
+                "version"            : "2.5.21",
                 "artifactId"         : "lib-wrapper",
                 "apidependenciesList": ["LibUtils", "LibUIUtils"]
         ],
         "LibUIUtils"                : [
-                "version"            : "2.5.22",
+                "version"            : "2.5.21",
                 "artifactId"         : "lib-uiutils",
                 "apidependenciesList": [
-                        "LibCommonUtils", "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
+                        "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
                         "LibRecycleviewExt", "LibTouchRegion", "LibViewExt"
                 ]
@@ -64,7 +64,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
                         "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
-                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug", "LibOS", "LibZip"
+                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug", "LibOS","LibZip"
                 ]
         ],
         "RouterAnnotation"          : [
@@ -192,15 +192,15 @@ ext.moduleInfo = [
                         "LibEncrypt",
                         "LibCommonUtils"]
         ],
-        "LibZip"                    : [
+        "LibZip"                   : [
                 "version"            : "2.5.15",
                 "artifactId"         : "lib-zip",
-                "apidependenciesList": ["LibLog", "LibThread"]
+                "apidependenciesList": [ "LibLog","LibThread"]
         ],
         "LibDownloadAndInstall"     : [
                 "version"            : "2.5.17",
                 "artifactId"         : "lib-download-install",
-                "apidependenciesList": ["LibFile", "LibZip", "LibRequest", "LibThread"]
+                "apidependenciesList": ["LibFile","LibZip", "LibRequest", "LibThread"]
         ],
         "LibText"                   : [
                 "version"            : "2.5.10",
@@ -283,7 +283,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibThread", "LibImage", "LibOS"]
         ],
         "LibNotification"           : [
-                "version"            : "2.5.22",
+                "version"            : "2.5.21",
                 "artifactId"         : "lib-notification",
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
