--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "APPTest"
+ext.mainProject = "LibNotification"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid"
@@ -283,7 +283,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibThread", "LibImage", "LibOS"]
         ],
         "LibNotification"           : [
-                "version"            : "2.5.3",
+                "version"            : "2.5.31",
                 "artifactId"         : "lib-notification",
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
